# NKI_RS2_EEG

./: .gitignore  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: docs.yaml  test.yaml
src/nki_rs2_eeg/: CorrCA_tutorial.ipynb  Helpers.py  __init__.py  blink_regression.py  clean.py  cleaning.py  cleaning_example.ipynb  config.py  create_figures.py  eeg_test.py  isc.py  isc_parra.py  isc_simulation.ipynb  noise_removal.py  plotting.ipynb  plotting.py  preprocess_job.sh  qc_metrics.py  quality_metrics.py  read_file.py  write_file.py
tests/: test_create_figures.py  test_quality_metrics.py
