[tool.poetry]
name = "nki-rs2-eeg"
version = "0.1.0"
description = "EEG data quality assessment for the NKI Rockland Sample 2 dataset."
authors = ["CMI DAIR <dair@childmind.org>"]
license = "LGPL-2.1-only"
readme = "README.md"
packages = [{include = "nki_rs2_eeg", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
mne = ">=1.0.0"
matplotlib = ">=3.5.0"
numpy = ">=1.21.0"
pynwb = ">=3.1.3,<5.0.0"
pandas = "^3.0.2"
pyprep = ">=0.6,<0.8"
defusedxml = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
mypy = ">=1.13.0"
pre-commit = ">=4.0.1"
pytest-cov = ">=6.0.0"
ruff = ">=0.8.1"
deptry = ">=0.23.0"

[tool.poetry.group.docs.dependencies]
pdoc = ">=15.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
